--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 <body>
     <h1 class="header">Gamble Assist</h1>
     <div class="nav-links">
-        <a href="mines/mines.html" class="nav-button">Mines Assistant</a>
-        <a href="keno/Keno.html" class="nav-button">Keno Assistant</a>
+        <a href="Mines/index.html" class="nav-button">Mines Assistant</a>
+        <a href="Keno/index.html" class="nav-button">Keno Assistant</a>
     </div>
 </body>
 </html>
